# bulla

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FALSIFICATIONS.md  GOVERNANCE.md  LICENSE  NOTICE  PROTOCOL-NOTE.md  README.md  SCITT-MAPPING.md  SECURITY.md  WITNESS-CONTRACT.md  action.yml  bulla-manifest-schema.json  bulla-manifest-spec-v0.1.md  composition-schema.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  dimension_submission.yml  feature_request.yml
.github/workflows/: bulla.yml  finalize-release.yml  publish.yml
agents/: REPLICATION-INVITATION.md  UPTAKE-PROTOCOL.md  UPTAKE-RESULTS.md  analyze_round4.py  uptake_results_round1.jsonl  uptake_results_round2.jsonl  uptake_results_round3.jsonl  uptake_results_round4.jsonl  uptake_test.py
audit/: AUDIT_REPORT.md  audit_report.json
bench/: bench_receipt.py
bench/golden/: V0.1-INTERPRETATION-CORRECTION.md
bench/invention/: README.md  analyze_marginal_seams.py  corpus.json  generate.py  run.py  run_drift.py  run_refinement_scaling.py  run_settlement_evaluation.py  run_smtinterpol.py
calibration/: .gitignore  HANDOFF.md  PAPER-DRAFT.md  THEOREM-TARGETS.md  VOCABULARY-PHENOMENON.md  __init__.py  analyze.py  annotate.py  b2b_empirical_check.py  certificate_chain.py  composition_completeness.py  compute.py  consequence_analysis.py  corpus.py  execution_gap.py  fee_breach_calibration_git.py  gap2_h1_check.py  index.py  kron_three_cases.py  predicate_invention.py  recourse_gate_closes_loop_git.py  recourse_gate_closes_loop_tar.py  recourse_gate_closes_loop_ticket.py  repair_closes_loop_git.py  report.py  seam_declaration.py  spectral.py  t2_achievability_gate.py  type_layer_slash.py  validate.py  verify_laplacian_collapse.py  witness_geometry_sweep.py  witness_master_example_search.py
calibration/data/: registry-hashes.json  standards-ingest-results.json
calibration/fixtures/: sprint13-seed-lifecycle-v044.json  sprint13_seed_certificates-v044.json
calibration/harness/: __init__.py  adversarial_probe.py  analysis.py  arms.py  experiment.py  familiarity.py  judge.py  lexical_intervention.py  live_validation.py  run_context_ablation.py  run_familiarity_probe.py  run_lexical_intervention.py  run_reverse_intervention.py  run_specification_gap.py  run_synthetic_ecology.py  seam_backend.py  (+3 more)
compositions/: regime_break_bridge_topology.yaml  regime_break_dfd_violation.yaml  synthetic_g19_positive_control.yaml
docs/: API-REGISTRY-PIPELINE.md  ARCHITECTURE.md  CAPABILITIES.md  FRAMEWORKS.md  GLYPH-SITE-PLAN.md  HOSTS.md  LEGACY-COMPOSITION-DIAGNOSTICS.md  MATROID-STRUCTURE.md  MIGRATING-TO-0.44.md  PROTOCOL-ROADMAP.md  REGIME.md  RELEASE-0.44.0.md  SEALED-RECEIPT-DECISION.md  SEMVER-SPEC-v1.0.md  SESSION-PROXY.md  STANDARDS-INGEST-NOTICES.md  STANDARDS-INGEST-SOURCES.md  STANDARDS-PACK-MAINTENANCE.md  UPDATE-PROTOCOL.md  ai-act-article-12-mapping.md
examples/: demo_reflexive.py  gate-quickstart.sh  langgraph_demo.py
releases/: 0.37.0.json  coverage.json  pypi-project.json  reconstruct.py
scripts/: adversarial_submodularity_survey.py  aggregate_golden_portability.py  audit_zero_import_verifier.py  bypass_analysis.py  check_readme_examples.py  download_pypi_release.py  generate_release_coverage.py  golden_smt_smoke.py  mint_release_receipt.py  record_golden_environment.py  replay_golden_v03_clean.py  replay_golden_v04_clean.py  run_chain_demo.py  run_convergence_demo.py  run_diamond_demo.py  run_discover_evidence.py  run_guided_discovery_demo.py  run_obligation_demo.py  run_value_extraction_demo.py  snapshot_pypi_releases.py  sync-to-standalone.sh  sync_to_standalone.py  verify_claim_flow_freeze.py  verify_endpoint_coupling.py  verify_golden.py  verify_golden_v02.py  verify_golden_v03.py  verify_golden_v04.py  verify_golden_v04_interpretation.py  verify_invention.py  verify_partition_matroid.py  verify_pypi_release.py  verify_release_archive_parity.py  verify_seed_fixture_lifecycle.py  verify_semantic_boundary.py  verify_semantic_boundary_stack.py  verify_semantic_finality.py  verify_tu_and_field_independence.py
shim-seam-lint/: README.md  pyproject.toml
shim-seam-lint/src/seam_lint/: __init__.py
spec/: ADR-001-standing-model.md  COMPATIBILITY.md  EXTERNAL-REVIEW-PACKAGE.md  IMPLEMENTATION-CHECKLIST.md  README.md  action-receipt-v0.1.md  action-receipt-v0.1.schema.json  action-receipt-v0.2-draft.md  action-receipt-v0.2.md  action-receipt-v0.2.schema.json  action-receipt-v0.3-draft.md  action-receipt-v0.3.schema.json  build_release_bundle.py  build_routed_profile_bundle.py  claim-flow-v0.4-experimental.md  commitment-slot-recourse-algebra-v0.1-draft.md  commitment-slot-v0.1-draft.md  delegation-design-note.md  receipt-primitive-v0.1.md  routed-inference-IMPLEMENTER.md  routed-inference-conformance-report-template.json  routed-inference-profile-status.json  routed-inference-profile-v0.1-draft.md  routed-inference-requirement-evidence.md  semantic-boundary-v0.3-experimental.md  semantic-finality-v0.1-experimental.md  threat-model-v0.1.md
tests/: test_a3_sweep.py  test_action_receipt.py  test_active_repair_tasks.py  test_adapters_pipeline_ci.py  test_adapters_pipeline_ci_controls.py  test_adapters_pipeline_ci_static.py  test_adapters_sae.py  test_adapters_sae_loader.py  test_adaptive_observability.py  test_adversarial_probe.py  test_adversarial_survey.py  test_api_registry.py  test_audit.py  test_authority_holonomy.py  test_bounds_conformance.py  test_bridge_kinds.py  test_canonicalization.py  test_certificate.py  test_certificate_signing.py  test_checkpoint.py  test_claim_flow.py  test_claim_flow_freeze.py  test_classifier_seam_spike.py  test_classifier_v2.py  test_cli.py  test_coboundary.py  test_cocycle_pairs.py  test_conformance_v0.py  test_consequence_analysis.py  test_control_plane.py  test_cose.py  test_coverage.py  test_crewai_runtime.py  test_cross_boundary_bond.py  test_deed_meta_tools.py  test_deed_recomputable.py  test_delegation.py  test_demo_compositions.py  test_dfd_chp_detectors.py  test_diagnostic.py  (+128 more)
(+819 files in other folders)
