[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulla"
# Single source of truth: src/bulla/__init__.py __version__ (read by hatch below).
# __version__ is stamped into every receipt's producer provenance, so a second
# source that could silently drift would be a provenance defect in a provenance
# tool. publish.yml gates that this version equals the pushed tag.
dynamic = ["version"]
description = "Recomputable receipts for authorless agent action — authority, bounds, recourse — plus receipt-coverage against an anchor you didn't mint"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [{ name = "John Komkov", email = "jk@gvt.ai" }]
keywords = [
    "agents", "agent-accountability", "action-receipt", "receipt", "recourse",
    "coverage", "audit", "provenance", "rfc6962", "ai-act-article-12",
    "mcp", "bulla", "langgraph", "crewai", "anthropic-mcp",
    "cursor", "claude-desktop", "claude-code", "windsurf", "zed", "cline",
    "coherence", "coherence-fee", "witness", "witness-receipt", "composition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml>=6.0",
    # tomllib is stdlib on 3.11+; tomli is the canonical backport for 3.10.
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ots = ["opentimestamps-client>=0.7"]
# Sign coherence attestations under an external agent identity (ed25519 / did:key).
# Bulla signs, never mints — see bulla.identity. One small, pure-Python dep.
identity = ["PyNaCl>=1.5"]
# COSE_Sign1 serialization of deeds as SCITT Signed Statements — see
# SCITT-MAPPING.md. Signing additionally needs [identity].
scitt = ["cbor2>=5.6", "PyNaCl>=1.5"]
discover = ["openai>=1.0", "anthropic>=0.20"]
# Framework adapters — optional. Static AST parsing has no runtime dep on
# the framework itself. These extras pull in the framework when the user
# wants the runtime adapters (`bulla.langgraph.bind`, `bulla.crewai.bind`)
# that snapshot live framework objects into a bulla.Session.
langgraph = ["langchain-core>=0.3", "langgraph>=1.2.9"]
crewai = ["crewai>=0.80"]
# G23 Stage A A3: cross-model 2-cover with restriction-map ablation.
# Heavy dependencies (torch, transformers, sae-lens, sentence-transformers,
# modal) are gated behind this extras tag to preserve the "zero heavy
# dependencies" promise of bulla's core install. Modules under
# bulla.adapters.{sae_data,sae_lens_backend,restriction_maps,sae_compose,
# sae_baseline} use lazy imports + TYPE_CHECKING guards so they import
# without torch installed (raising a clear ImportError with install hint
# at first instantiation that requires torch). NOT included in the `all`
# extras: interpretability research is heavyweight and a user doing
# `pip install bulla[all]` should not pay for ~5GB of weights they may
# not use.
# sae-lens minor pinned: 5.x is changing rapidly; minor-floating breaks
# reproducibility silently (2026-05-06 lesson).
interp-sae = [
    "sae-lens>=5.5,<6.0",
    "transformers>=4.46,<5.0",
    "torch>=2.4,<3.0",
    "huggingface-hub>=0.26",
    "scipy>=1.14",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "modal>=0.65",
]
# Deprecated alias for the old internal codename; kept one release for
# `pip install bulla[g23-a3]` callers. Prefer `interp-sae`.
g23-a3 = ["bulla[interp-sae]"]
all = ["bulla[ots,identity,scitt,discover,langgraph,crewai]"]

[project.scripts]
bulla = "bulla.cli:main"

[project.urls]
Homepage = "https://github.com/jkomkov/bulla"
Documentation = "https://github.com/jkomkov/bulla/tree/main/docs"
Issues = "https://github.com/jkomkov/bulla/issues"
Changelog = "https://github.com/jkomkov/bulla/blob/main/CHANGELOG.md"
Spec = "https://github.com/jkomkov/bulla/blob/main/WITNESS-CONTRACT.md"

[tool.hatch.version]
path = "src/bulla/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bulla"]

[tool.hatch.build.targets.wheel.force-include]
"src/bulla/agents/system_prompt_v1.md" = "bulla/agents/system_prompt_v1.md"
"src/bulla/data/showcase/filesystem.json" = "bulla/data/showcase/filesystem.json"
"src/bulla/data/showcase/github.json" = "bulla/data/showcase/github.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
# A fresh `git clone && pytest` runs the CODE suite — green, hang-free, offline. Three
# categories are deselected by default; each runs explicitly via its marker:
#   network    — needs network (a model download); `pytest -m network`
#   editorial  — asserts manuscript content/drift in papers/, not library behaviour, so a
#                code contributor's red/green never depends on an ambiguous citation bracket;
#                `pytest -m editorial`
#   quarantine — known-broken-in-suite, root cause under investigation; `pytest -m quarantine`
addopts = "-m 'not network and not editorial and not quarantine'"
markers = [
    "network: requires network access (model download / live registry / OTS calendar); deselected by default — run with `pytest -m network`.",
    "editorial: asserts manuscript content or drift in papers/ (not library behaviour); deselected from the code suite — run with `pytest -m editorial`.",
    "quarantine: known-broken when collected in-suite, root cause under investigation; deselected by default — run with `pytest -m quarantine`.",
]
