[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seam-lint"
version = "0.7.0"
description = "Deprecated — renamed to bulla. Install bulla instead: pip install bulla"
authors = [{ name = "Glyph" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["bulla>=0.7.0"]
readme = "README.md"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/jkomkov/bulla"

[project.scripts]
seam-lint = "seam_lint:main"
